--- a/ManagementSystem/nbproject/private/private.properties
+++ b/ManagementSystem/nbproject/private/private.properties
@@ -5,4 +5,4 @@ do.jlink=false
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=C:\\Users\\pajar\\AppData\\Roaming\\NetBeans\\13\\build.properties
+user.properties.file=C:\\Users\\Jester Salen\\AppData\\Roaming\\NetBeans\\15\\build.properties
